--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link ref="stylesheet" src="index.css">
-    <title>Document</title>
+    <title>CSS Variables</title>
 </head>
 <body>
     
+    <script src="main.js">
+        
+    </script>
 </body>
 </html>
