added 1 line of js

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <title>CSS Variables</title>
 </head>
 <body>
-    
-    <script src="main.js">
-        
+    <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+
+    <script src="main.js">    
     </script>
 </body>
 </html>
