--- a/index.html
+++ b/index.html
@@ -9,7 +9,19 @@
 </head>
 <body>
     <h2>Update CSS Variables with <span class='hl'>JS</span></h2>
+    <div class="controls">
+        <label for="spacing">Spacing:</label>
+        <input id ="spacing" type="range" name="spacing" min="10" max="200" value="10" data-sizing="px">
 
+        <label for="blur">Blur:</label>
+        <input id="blur" type="range" name="blur" min="0" man="25" value="10" data-sizing="px">
+
+        <label for="base">Base:</label>
+        <input id="blur" type="color" name="base" value="#ffc600"> 
+        </div>
+
+        <img src="">
+        
     <script src="main.js">    
     </script>
 </body>
