--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <input id="blur" type="color" name="base" value="#ffc600"> 
         </div>
 
-        <img src="">
-        
+        <img src="media/be.jpg">
+
     <script src="main.js">    
     </script>
 </body>
