added second picture

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <input id="blur" type="range" name="blur" min="0" man="25" value="10" data-sizing="px">
 
         <label for="base">Base:</label>
-        <input id="blur" type="color" name="base" value="#ffc600"> 
+        <input id="blur" type="color" name="base" value="#d6b9ce"> 
         </div>
 
         <img src="media/be.jpg">
